--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link href="../dist/output.css" rel="stylesheet">
+    <link href="dist/output.css" rel="stylesheet">
     <script>document.documentElement.classList.add('js')</script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
@@ -41,7 +41,7 @@
         </div>
         <div class="image w-2/4 mt-40">
             <div class="circle w-80 h-72 bg-blue-700 absolute -z-50 -ms-10 dark:bg-yellow-200" style="clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);">
-                <img class="image" src="assets/me2.jpeg" alt="No image" class="w-80 h-72 object-cover">
+                <img class="image" src="src/assets/me2.jpeg" alt="No image" class="w-80 h-72 object-cover">
             </div>
         </div>
     </div>
@@ -55,19 +55,19 @@
         <h1 data-aos="fade-left" class="text-2xl font-bold mt-12 flex justify-end me-5 mb-8">SKILLS</h1>
         <div class="container flex justify-end items-center flex-wrap">
             <div data-aos="zoom-in-left" class="skill w-40 h-40 dark:shadow-white dark:shadow-lg mx-8">
-                <img src="assets/html-removebg-preview.png" alt="HTML" class="w-32 h-32 hover:scale-125 duration-300 ease-out mx-auto mt-3">
+                <img src="src/assets/html-removebg-preview.png" alt="HTML" class="w-32 h-32 hover:scale-125 duration-300 ease-out mx-auto mt-3">
             </div>
             <div data-aos="zoom-in-left" class="skill w-40 h-40 dark:shadow-white dark:shadow-lg mx-8">
-                <img src="assets/css.png" alt="CSS" class="w-24 h-32 mx-auto mt-3 hover:scale-125 duration-300 ease-out">
+                <img src="src/assets/css.png" alt="CSS" class="w-24 h-32 mx-auto mt-3 hover:scale-125 duration-300 ease-out">
             </div>
             <div data-aos="zoom-in-left" class="skill w-40 h-40 dark:shadow-white dark:shadow-lg mx-8">
-                <img src="assets/bootstrap.png" alt="BOOTSTRAP" class="w-32 h-24 mx-auto mt-8 hover:scale-125 duration-300 ease-out">
+                <img src="src/assets/bootstrap.png" alt="BOOTSTRAP" class="w-32 h-24 mx-auto mt-8 hover:scale-125 duration-300 ease-out">
             </div>
             <div data-aos="zoom-in-left" class="skill w-40 h-40 dark:shadow-white dark:shadow-lg mx-8">
-                <img src="assets/tailwind.png" alt="TAILWIND" class="w-40 h-24 mx-auto mt-8 hover:scale-125 duration-300 ease-out">
+                <img src="src/assets/tailwind.png" alt="TAILWIND" class="w-40 h-24 mx-auto mt-8 hover:scale-125 duration-300 ease-out">
             </div>
             <div data-aos="zoom-in-left" class="skill w-40 h-40 dark:shadow-white dark:shadow-lg mx-8">
-                <img src="assets/php.png" alt="PHP" class="w-40 h-40 mx-auto hover:scale-125 duration-300 ease-out">
+                <img src="src/assets/php.png" alt="PHP" class="w-40 h-40 mx-auto hover:scale-125 duration-300 ease-out">
             </div>
         </div>
     </div>
@@ -75,8 +75,8 @@
     <div class="project w-full min-h-screen dark:text-white" id="project">
         <h1 data-aos="fade-right" class="text-3xl font-bold ms-5 mb-12">PROJECTS</h1>
         <div class="boxes ms-5 flex flex-wrap justify-center">
-            <a data-aos="flip-up" data-aos-duration="2000" href="https://dev-ryanantaswordpress.pantheonsite.io/"><p class="ms-5">Made With Wordpress</p><div class="box w-96 h-56 mx-5 mb-5 bg-cover hover:scale-95 duration-200 ease-out font-bold opacity-60" style="background-image: url(assets/wordpress.png);"></div></a>
-            <a data-aos="flip-up" data-aos-duration="2000" href="https://ryanantadanendra.github.io/"><p class="ms-5">Made With HTML, CSS, Js</p><div class="box w-96 h-56 bg-cover mx-5 mb-5 hover:scale-95 duration-200 ease-out" style="background-image: url(assets/vanilla.png);"></div></a>
+            <a data-aos="flip-up" data-aos-duration="2000" href="https://dev-ryanantaswordpress.pantheonsite.io/"><p class="ms-5">Made With Wordpress</p><div class="box w-96 h-56 mx-5 mb-5 bg-cover hover:scale-95 duration-200 ease-out font-bold opacity-60" style="background-image: url(src/assets/wordpress.png);"></div></a>
+            <a data-aos="flip-up" data-aos-duration="2000" href="https://ryanantadanendra.github.io/"><p class="ms-5">Made With HTML, CSS, Js</p><div class="box w-96 h-56 bg-cover mx-5 mb-5 hover:scale-95 duration-200 ease-out" style="background-image: url(src/assets/vanilla.png);"></div></a>
             <div class="box w-96 h-56 mx-5">Soon. . .</div>
             <div class="box w-96 h-56 mx-5">Soon. . .</div>
         </div>
