--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link href="dist/output.css" rel="stylesheet">
-    <script>document.documentElement.classList.add('js')</script>
+    <!-- <script>document.documentElement.classList.add('js')</script> -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
-<body class="bg-gray-100 dark:bg-slate-800 duration-300 ease-out">
-    <div class="container font-bold w-full h-16 flex justify-between items-center bg-transparent fixed">
+<body class="bg-gray-100 dark:bg-slate-800 duration-300 ease-out overflow-x-hidden">
+    <div class="font-bold w-full h-16 flex justify-between items-center bg-transparent fixed top-0">
         <div class="text flex items-center">
             <h1 class="ms-5 dark:text-white">My Portfolio</h1>
             <button class="moon ms-5 text-xl" onclick="toggleDarkMode()"><svg class="dark:fill-white" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com --><path d="M223.5 32C100 32 0 132.3 0 256S100 480 223.5 480c60.6 0 115.5-24.2 155.8-63.4c5-4.9 6.3-12.5 3.1-18.7s-10.1-9.7-17-8.5c-9.8 1.7-19.8 2.6-30.1 2.6c-96.9 0-175.5-78.8-175.5-176c0-65.8 36-123.1 89.3-153.3c6.1-3.5 9.2-10.5 7.7-17.3s-7.3-11.9-14.3-12.5c-6.3-.5-12.6-.8-19-.8z"/></svg></button>
@@ -51,8 +51,8 @@
         <p data-aos="fade-up-right" class="dark:text-white font-light">Hi There! My name is A. A. Ngurah Bagus Ryananta Danendra. You can call me Danend. Im 17 years old and i was born in the 13th of April 2006. Im a student at Smk Negeri 1 Denpasar, Bali. My major at Smkn 1 Denpasar is Software Enginner. I Have some hobbies that i like to do when i have a free time. My hobbied are playing Basketball, cycling, Playing soccer, and of course coding.</p>
     </div>
 
-    <div class="skills min-h-screen dark:text-white" id="skills">
-        <h1 data-aos="fade-left" class="text-2xl font-bold mt-12 flex justify-end me-5 mb-8">SKILLS</h1>
+    <div class="skills min-h-screen w-full dark:text-white" id="skills">
+        <h1 data-aos="fade-left" class="text-2xl right-0 font-bold mt-12 flex justify-end me-5 mb-8">SKILLS</h1>
         <div class="container flex justify-end items-center flex-wrap">
             <div data-aos="zoom-in-left" class="skill w-40 h-40 dark:shadow-white dark:shadow-lg mx-8">
                 <img src="src/assets/html-removebg-preview.png" alt="HTML" class="w-32 h-32 hover:scale-125 duration-300 ease-out mx-auto mt-3">
@@ -69,22 +69,28 @@
             <div data-aos="zoom-in-left" class="skill w-40 h-40 dark:shadow-white dark:shadow-lg mx-8">
                 <img src="src/assets/php.png" alt="PHP" class="w-40 h-40 mx-auto hover:scale-125 duration-300 ease-out">
             </div>
+            <div data-aos="zoom-in-left" class="skill w-40 h-40 mt-5 dark:shadow-white dark:shadow-lg mx-8">
+                <img src="src/assets/git.png" alt="GIT" class="w-40 h-40 mx-auto hover:scale-125 duration-300 ease-out">
+            </div>
+            <div data-aos="zoom-in-left" class="skill w-40 h-40 mt-5 dark:shadow-white dark:shadow-lg mx-8">
+                <img src="src/assets/github.png" alt="GITHUB" class="w-40 h-40 mx-auto hover:scale-125 duration-300 ease-out">
+            </div>
         </div>
     </div>
 
     <div class="project w-full min-h-screen dark:text-white" id="project">
         <h1 data-aos="fade-right" class="text-3xl font-bold ms-5 mb-12">PROJECTS</h1>
         <div class="boxes ms-5 flex flex-wrap justify-center">
-            <a data-aos="flip-up" data-aos-duration="2000" href="https://dev-ryanantaswordpress.pantheonsite.io/"><p class="ms-5">Made With Wordpress</p><div class="box w-96 h-56 mx-5 mb-5 bg-cover hover:scale-95 duration-200 ease-out font-bold opacity-60" style="background-image: url(src/assets/wordpress.png);"></div></a>
-            <a data-aos="flip-up" data-aos-duration="2000" href="https://ryanantadanendra.github.io/"><p class="ms-5">Made With HTML, CSS, Js</p><div class="box w-96 h-56 bg-cover mx-5 mb-5 hover:scale-95 duration-200 ease-out" style="background-image: url(src/assets/vanilla.png);"></div></a>
+            <a data-aos="flip-up" data-aos-duration="2000" href="https://dev-ryanantaswordpress.pantheonsite.io/"><p class="made ms- text-center">Made With Wordpress</p><div class="box w-96 h-56 mx-5 mb-5 bg-cover hover:scale-95 duration-200 ease-out font-bold opacity-60" style="background-image: url(src/assets/wordpress.png);"></div></a>
+            <a data-aos="flip-up" data-aos-duration="2000" href="https://ryanantadanendra.github.io/"><p class="made ms-5 text-center">Made With HTML, CSS, Js</p><div class="box w-96 h-56 bg-cover mx-5 mb-5 hover:scale-95 duration-200 ease-out" style="background-image: url(src/assets/vanilla.png);"></div></a>
             <div class="box w-96 h-56 mx-5">Soon. . .</div>
             <div class="box w-96 h-56 mx-5">Soon. . .</div>
         </div>
     </div>
 
-    <footer class="text-center opacity-50 dark:text-white">Copyright @2023 by Ryananta Danendra</footer>
+    <footer class="text-center bottom-0 text-black text-sm dark:text-white">Copyright @2023 by Ryananta Danendra</footer>
 
-    <script src="script.js"></script>
+    <script src="src/script.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
