Mengatur media query

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </label>
             <div class="sidebar flex right-0 dark:text-white">
                 <div class="link-container1"><a href="#hero" class="link1 mx-2">Home</a></div>
-                <div class="link-container"><a href="#about" class="link mx-2">About Me</a></div>
+                <div class="link-container"><a href="#about" class="link mx-2">About</a></div>
                 <div class="link-container"><a href="#skills" class="link mx-2">Skills</a></div>
                 <div class="link-container"><a href="#project" class="link mx-2">Projects</a></div>
             </div>
