--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
     </div>
 
     <div id="hero" class="hero w-full min-h-screen flex top-0">
-        <div class="text w-2/4 mt-56 ms-56">
+        <div class="image w-2/4 mt-35">
+            <div class="circle w-80 h-72 bg-blue-700 -z-50 ms-80 mt-40 dark:bg-yellow-200" style="clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);">
+                <img class="image" src="src/assets/me2.jpeg" alt="No image" class="w-80 h-72 object-cover">
+            </div>
+        </div>
+        <div class="text w-2/4 mt-56 ms-20">
             <h1 class="text-4xl font-bold dark:text-white">Ryananta Danendra</h1>
             <h3 class="text-2xl dark:text-white">Welcome To My Portfolio</h3>
             <div class="social flex mt-2">
@@ -39,11 +44,6 @@
             </div>
             <div class="underline w-32 h-2 bg-blue-700 rounded-e-full mt-2 dark:bg-yellow-200"></div>
         </div>
-        <div class="image w-2/4 mt-40">
-            <div class="circle w-80 h-72 bg-blue-700 absolute -z-50 -ms-10 dark:bg-yellow-200" style="clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);">
-                <img class="image" src="src/assets/me2.jpeg" alt="No image" class="w-80 h-72 object-cover">
-            </div>
-        </div>
     </div>
 
     <div class="about w-2/4 ms-5" id="about">
@@ -52,28 +52,28 @@
     </div>
 
     <div class="skills min-h-screen w-full dark:text-white" id="skills">
-        <h1 data-aos="fade-left" class="text-2xl right-0 font-bold mt-12 flex justify-end me-5 mb-8">SKILLS</h1>
-        <div class="container flex justify-end items-center flex-wrap">
+        <h1 data-aos="fade-left" class="text-2xl right-0 font-bold mt-12 ms-5 mb-8">SKILLS</h1>
+        <div class="container flex items-center justify-center flex-wrap">
             <div data-aos="zoom-in-left" class="skill w-40 h-40 dark:shadow-white dark:shadow-lg mx-8">
                 <img src="src/assets/html-removebg-preview.png" alt="HTML" class="w-32 h-32 hover:scale-125 duration-300 ease-out mx-auto mt-3">
             </div>
             <div data-aos="zoom-in-left" class="skill w-40 h-40 dark:shadow-white dark:shadow-lg mx-8">
-                <img src="src/assets/css.png" alt="CSS" class="w-24 h-32 mx-auto mt-3 hover:scale-125 duration-300 ease-out">
+                <img src="src/assets/css.png" alt="CSS" class="w-24 h-32 mt-3 hover:scale-125 duration-300 ease-out">
             </div>
             <div data-aos="zoom-in-left" class="skill w-40 h-40 dark:shadow-white dark:shadow-lg mx-8">
-                <img src="src/assets/bootstrap.png" alt="BOOTSTRAP" class="w-32 h-24 mx-auto mt-8 hover:scale-125 duration-300 ease-out">
+                <img src="src/assets/bootstrap.png" alt="BOOTSTRAP" class="w-32 h-24 mt-8 hover:scale-125 duration-300 ease-out">
             </div>
             <div data-aos="zoom-in-left" class="skill w-40 h-40 dark:shadow-white dark:shadow-lg mx-8">
-                <img src="src/assets/tailwind.png" alt="TAILWIND" class="w-40 h-24 mx-auto mt-8 hover:scale-125 duration-300 ease-out">
+                <img src="src/assets/tailwind.png" alt="TAILWIND" class="w-40 h-24 mt-8 hover:scale-125 duration-300 ease-out">
             </div>
             <div data-aos="zoom-in-left" class="skill w-40 h-40 dark:shadow-white dark:shadow-lg mx-8">
-                <img src="src/assets/php.png" alt="PHP" class="w-40 h-40 mx-auto hover:scale-125 duration-300 ease-out">
+                <img src="src/assets/php.png" alt="PHP" class="w-40 h-40 hover:scale-125 duration-300 ease-out">
             </div>
             <div data-aos="zoom-in-left" class="skill w-40 h-40 mt-5 dark:shadow-white dark:shadow-lg mx-8">
-                <img src="src/assets/git.png" alt="GIT" class="w-40 h-40 mx-auto hover:scale-125 duration-300 ease-out">
+                <img src="src/assets/git.png" alt="GIT" class="w-40 h-40 hover:scale-125 duration-300 ease-out">
             </div>
             <div data-aos="zoom-in-left" class="skill w-40 h-40 mt-5 dark:shadow-white dark:shadow-lg mx-8">
-                <img src="src/assets/github.png" alt="GITHUB" class="w-40 h-40 mx-auto hover:scale-125 duration-300 ease-out">
+                <img src="src/assets/github.png" alt="GITHUB" class="w-40 h-40 hover:scale-125 duration-300 ease-out">
             </div>
         </div>
     </div>
