--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link href="dist/output.css" rel="stylesheet">
+    <link href="../dist/output.css" rel="stylesheet">
     <!-- <script>document.documentElement.classList.add('js')</script> -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
@@ -29,8 +29,8 @@
 
     <div id="hero" class="hero w-full min-h-screen flex top-0">
         <div class="image w-2/4 mt-35">
-            <div class="circle w-80 h-72 bg-blue-700 -z-50 ms-80 mt-40 dark:bg-yellow-200" style="clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);">
-                <img class="image" src="src/assets/me2.jpeg" alt="No image" class="w-80 h-72 object-cover">
+            <div class="circle w-80 h-80 bg-blue-700 -z-50 ms-72 mt-40 dark:bg-yellow-200 rounded-full">
+                <img class="image" src="src/assets/me2.jpeg" alt="No image" class="w-80 h-80 object- rounded-full">
             </div>
         </div>
         <div class="text w-2/4 mt-56 ms-20">
@@ -58,22 +58,22 @@
                 <img src="src/assets/html-removebg-preview.png" alt="HTML" class="w-32 h-32 hover:scale-125 duration-300 ease-out mx-auto mt-3">
             </div>
             <div data-aos="zoom-in-left" class="skill w-40 h-40 dark:shadow-white dark:shadow-lg mx-8">
-                <img src="src/assets/css.png" alt="CSS" class="w-24 h-32 mt-3 hover:scale-125 duration-300 ease-out">
+                <img src="src/assets/css.png" alt="CSS" class="w-24 h-32 mt-3 hover:scale-125 duration-300 ease-out mx-auto">
             </div>
             <div data-aos="zoom-in-left" class="skill w-40 h-40 dark:shadow-white dark:shadow-lg mx-8">
-                <img src="src/assets/bootstrap.png" alt="BOOTSTRAP" class="w-32 h-24 mt-8 hover:scale-125 duration-300 ease-out">
+                <img src="src/assets/bootstrap.png" alt="BOOTSTRAP" class="w-32 h-24 mt-8 hover:scale-125 duration-300 ease-out mx-auto">
             </div>
             <div data-aos="zoom-in-left" class="skill w-40 h-40 dark:shadow-white dark:shadow-lg mx-8">
-                <img src="src/assets/tailwind.png" alt="TAILWIND" class="w-40 h-24 mt-8 hover:scale-125 duration-300 ease-out">
+                <img src="src/assets/tailwind.png" alt="TAILWIND" class="w-40 h-24 mt-8 hover:scale-125 duration-300 ease-out mx-auto">
             </div>
             <div data-aos="zoom-in-left" class="skill w-40 h-40 dark:shadow-white dark:shadow-lg mx-8">
-                <img src="src/assets/php.png" alt="PHP" class="w-40 h-40 hover:scale-125 duration-300 ease-out">
+                <img src="src/assets/php.png" alt="PHP" class="w-40 h-40 hover:scale-125 duration-300 ease-out mx-auto">
             </div>
             <div data-aos="zoom-in-left" class="skill w-40 h-40 mt-5 dark:shadow-white dark:shadow-lg mx-8">
-                <img src="src/assets/git.png" alt="GIT" class="w-40 h-40 hover:scale-125 duration-300 ease-out">
+                <img src="src/assets/git.png" alt="GIT" class="w-40 h-40 hover:scale-125 duration-300 ease-out mx-auto">
             </div>
             <div data-aos="zoom-in-left" class="skill w-40 h-40 mt-5 dark:shadow-white dark:shadow-lg mx-8">
-                <img src="src/assets/github.png" alt="GITHUB" class="w-40 h-40 hover:scale-125 duration-300 ease-out">
+                <img src="src/assets/github.png" alt="GITHUB" class="w-40 h-40 hover:scale-125 duration-300 ease-out mx-auto">
             </div>
         </div>
     </div>
@@ -90,7 +90,7 @@
 
     <footer class="text-center bottom-0 text-black text-sm dark:text-white">Copyright @2023 by Ryananta Danendra</footer>
 
-    <script src="src/script.js"></script>
+    <script src="script.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
