--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link href="../dist/output.css" rel="stylesheet">
+    <link href="dist/output.css" rel="stylesheet">
     <!-- <script>document.documentElement.classList.add('js')</script> -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
@@ -90,7 +90,7 @@
 
     <footer class="text-center bottom-0 text-black text-sm dark:text-white">Copyright @2023 by Ryananta Danendra</footer>
 
-    <script src="script.js"></script>
+    <script src="src/script.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
