--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body class="bg-gray-100 dark:bg-slate-800 duration-300 ease-out overflow-x-hidden">
-    <div class="font-bold w-full h-16 flex justify-between items-center bg-transparent fixed top-0">
+    <div class="navbar font-bold w-full h-16 flex justify-between items-center bg-transparent fixed top-0">
         <div class="text flex items-center">
             <h1 class="ms-5 dark:text-white">My Portfolio</h1>
             <button class="moon ms-5 text-xl" onclick="toggleDarkMode()"><svg class="dark:fill-white" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com --><path d="M223.5 32C100 32 0 132.3 0 256S100 480 223.5 480c60.6 0 115.5-24.2 155.8-63.4c5-4.9 6.3-12.5 3.1-18.7s-10.1-9.7-17-8.5c-9.8 1.7-19.8 2.6-30.1 2.6c-96.9 0-175.5-78.8-175.5-176c0-65.8 36-123.1 89.3-153.3c6.1-3.5 9.2-10.5 7.7-17.3s-7.3-11.9-14.3-12.5c-6.3-.5-12.6-.8-19-.8z"/></svg></button>
@@ -27,13 +27,13 @@
         </div>
     </div>
 
-    <div id="hero" class="hero w-full min-h-screen flex top-0">
-        <div class="image w-2/4 mt-35">
-            <div class="circle w-80 h-80 bg-blue-700 -z-50 ms-72 mt-40 dark:bg-yellow-200 rounded-full">
-                <img class="image" src="src/assets/me2.jpeg" alt="No image" class="w-80 h-80 object- rounded-full">
-            </div>
+    <div id="hero" class="hero w-full min-h-screen flex top-0 items-center">
+        <div class="image w-2/4">
+            <!-- <div class="circle w-80 h-80 bg-blue-700 -z-50 ms-72 mt-40 dark:bg-yellow-200 rounded-full"> -->
+                <img src="src/assets/me2.jpeg" alt="No image" class="mx-auto circle rounded-full aspect-square h-80 object-cover">
+            <!-- </div> -->
         </div>
-        <div class="text w-2/4 mt-56 ms-20">
+        <div class="text w-2/4 ">
             <h1 class="text-4xl font-bold dark:text-white">Ryananta Danendra</h1>
             <h3 class="text-2xl dark:text-white">Welcome To My Portfolio</h3>
             <div class="social flex mt-2">
@@ -46,13 +46,13 @@
         </div>
     </div>
 
-    <div class="about w-2/4 ms-5" id="about">
+    <div class="about w-2/4 px-3" id="about">
         <h1 data-aos="fade-right" class="text-black text-3xl font-bold dark:text-white">About Me</h1>
         <p data-aos="fade-up-right" class="dark:text-white font-light">Hi There! My name is A. A. Ngurah Bagus Ryananta Danendra. You can call me Danend. Im 17 years old and i was born in the 13th of April 2006. Im a student at Smk Negeri 1 Denpasar, Bali. My major at Smkn 1 Denpasar is Software Enginner. I Have some hobbies that i like to do when i have a free time. My hobbied are playing Basketball, cycling, Playing soccer, and of course coding.</p>
     </div>
 
     <div class="skills min-h-screen w-full dark:text-white" id="skills">
-        <h1 data-aos="fade-left" class="text-2xl right-0 font-bold mt-12 ms-5 mb-8">SKILLS</h1>
+        <h1 data-aos="fade-left" class="text-2xl font-bold mt-12 mb-8">SKILLS</h1>
         <div class="container flex items-center justify-center flex-wrap">
             <div data-aos="zoom-in-left" class="skill w-40 h-40 dark:shadow-white dark:shadow-lg mx-8">
                 <img src="src/assets/html-removebg-preview.png" alt="HTML" class="w-32 h-32 hover:scale-125 duration-300 ease-out mx-auto mt-3">
@@ -79,10 +79,10 @@
     </div>
 
     <div class="project w-full min-h-screen dark:text-white" id="project">
-        <h1 data-aos="fade-right" class="text-3xl font-bold ms-5 mb-12">PROJECTS</h1>
-        <div class="boxes ms-5 flex flex-wrap justify-center">
-            <a data-aos="flip-up" data-aos-duration="2000" href="https://dev-ryanantaswordpress.pantheonsite.io/"><p class="made ms- text-center">Made With Wordpress</p><div class="box w-96 h-56 mx-5 mb-5 bg-cover hover:scale-95 duration-200 ease-out font-bold opacity-60" style="background-image: url(src/assets/wordpress.png);"></div></a>
-            <a data-aos="flip-up" data-aos-duration="2000" href="https://ryanantadanendra.github.io/"><p class="made ms-5 text-center">Made With HTML, CSS, Js</p><div class="box w-96 h-56 bg-cover mx-5 mb-5 hover:scale-95 duration-200 ease-out" style="background-image: url(src/assets/vanilla.png);"></div></a>
+        <h1 data-aos="fade-right" class="text-3xl font-bold mb-12">PROJECTS</h1>
+        <div class="boxes flex flex-wrap justify-center">
+            <a data-aos="flip-up" data-aos-duration="2000" href="https://dev-ryanantaswordpress.pantheonsite.io/"><p class="made text-center">Made With Wordpress</p><div class="box w-96 h-56 mx-5 mb-5 bg-cover hover:scale-95 duration-200 ease-out font-bold opacity-60" style="background-image: url(src/assets/wordpress.png);"></div></a>
+            <a data-aos="flip-up" data-aos-duration="2000" href="https://ryanantadanendra.github.io/"><p class="made text-center">Made With HTML, CSS, Js</p><div class="box w-96 h-56 bg-cover mx-5 mb-5 hover:scale-95 duration-200 ease-out" style="background-image: url(src/assets/vanilla.png);"></div></a>
             <div class="box w-96 h-56 mx-5">Soon. . .</div>
             <div class="box w-96 h-56 mx-5">Soon. . .</div>
         </div>
