--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
             <div data-aos="zoom-in-left" class="skill w-40 h-40 mt-5 dark:shadow-white dark:shadow-lg mx-8">
                 <img src="src/assets/github.png" alt="GITHUB" class="w-40 h-40 hover:scale-125 duration-300 ease-out mx-auto">
             </div>
+            <div data-aos="zoom-in-left" class="skill w-40 h-40 mt-5 dark:shadow-white dark:shadow-lg mx-8">
+                <img src="src/assets/wordpress1.png" alt="WORDPRESS" class="w-40 h-40 hover:scale-125 duration-300 ease-out mx-auto">
+            </div>
         </div>
     </div>
 
