--- a/blog.html
+++ b/blog.html
@@ -3,17 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Document</title>
     <link href="dist/output.css" rel="stylesheet">
     <link rel="stylesheet" href="src/app.css">
-    <!-- <script>document.documentElement.classList.add('js')</script> -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
-<body class="bg-gray-100 overflow-x-hidden">
-    <div class="navbar font-bold w-full h-16 flex justify-between items-center bg-white shadow-md shadow-black dark:bg-slate-800 duration-300 ease-in fixed top-0 z-50">
+<body class="overflow-x-hidden">
+    <div class="navbar font-bold w-full h-16 flex justify-between items-center shadow-md bg-white shadow-black fixed top-0 z-50 dark:bg-slate-800 duration-200 ease-in dark:shadow-white">
         <div class="text flex items-center">
             <h1 class="ms-5 dark:text-white">My Portfolio</h1>
             <button class="moon ms-5 text-xl" onclick="toggleDarkMode()"><svg class="dark:fill-white fill-black" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com --><path d="M223.5 32C100 32 0 132.3 0 256S100 480 223.5 480c60.6 0 115.5-24.2 155.8-63.4c5-4.9 6.3-12.5 3.1-18.7s-10.1-9.7-17-8.5c-9.8 1.7-19.8 2.6-30.1 2.6c-96.9 0-175.5-78.8-175.5-176c0-65.8 36-123.1 89.3-153.3c6.1-3.5 9.2-10.5 7.7-17.3s-7.3-11.9-14.3-12.5c-6.3-.5-12.6-.8-19-.8z"/></svg></button>
@@ -30,19 +28,59 @@
         </div>
     </div>
 
-    <div id="hero" class="hero w-full min-h-screen flex top-0 items-center dark:bg-slate-800 duration-500 ease-in">
-        <div class="image w-2/4">
-            <!-- <div class="circle w-80 h-80 bg-blue-700 -z-50 ms-72 mt-40 dark:bg-yellow-200 rounded-full"> -->
-                <img src="src/assets/me2.jpeg" alt="No image" class="mx-auto circle rounded-full aspect-square h-80 object-cover">
-            <!-- </div> -->
+    <div class="heading h-40 flex justify-center items-center shadow-inner bg-white py-32 dark:bg-slate-800 dark:text-white duration 300 ease-in">
+        <h1 class="text-4xl">Blog</h1>
+    </div>
+
+    <div class="content w-full h-40 dark:bg-slate-800 dark:text-white duration-500 ease-in">
+        <h2 class="text-center">Maybe i'll just write unnecessary things here, but--enjoy!</h2>
+    </div>
+
+    <div class="blogs h-full pb-32 dark:bg-slate-800 dark:text-white duration-700 ease-in">
+        <div class="blog w-full px-40">
+            <h1 class="font-bold flex items-center gap-3">
+                Type 1 diabetes since February 2023
+                <button type="change" onclick="show()" id="button"><svg id="svg" xmlns="http://www.w3.org/2000/svg" class="fill-black" height="1em" viewBox="0 0 320 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com --><path d="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z"/></svg></button></h1>
+            <p id="paragraf" class="text-justify hidden">I suffer a type 1 diabetes from February 2023. type 1 diabetic is--maybe i'll just take the explanation from chatGPT so its more accurate. <br>Type 1 diabetes is a chronic condition in which the pancreas produces little or no insulin. Insulin is a hormone that helps the body to use glucose for energy. Without enough insulin, the glucose stays in the bloodstream, leading to high blood sugar levels, which can cause a range of complications.
+            Type 1 diabetes is usually diagnosed in children and young adults, although it can appear at any age. The exact cause of type 1 diabetes is not known, but it is believed to be an autoimmune condition in which the body's immune system mistakenly attacks and destroys the insulin-producing beta cells in the pancreas. This type of diabetes is not related to lifestyle factors such as diet and exercise.
+            <br>
+            So thats the meaning of type 1 diabetes so start from the day im diagnized suffering the type 1 diabetes, i need to inject the thing called insulin everytime before i eat, and need to check my blood sugar for 7 times in a day.
+            <br>
+            The symptoms of type 1 diabetes is you'll get easily hungry, thirsty, and always wanted to pee. I had that symptoms for--1 years maybe, but i didn't know that it was a diabetes symptoms, so i just dont go to the doctor to check that, and after the day i collapese.
+            <br>
+            I'll tell the story of me after i collapse--i got this from my mon. So i collapse on February--i forgot what date but i'ts February. I collapse in the morning after i woke up and before eating my breakfast and my mom saw that i was-- what do you call "linglung" in english i dont know:D--sorry. and after that my mom rush me to the first hospital and its full and took to the second hospital by ambulance, and after i arrived at the second hospital, i lost consciousness for about 2 weeks. and the doctor tolde my family that i need to dialyse and my hope to stay alive was only 1%--the doctor says that not me. its still a long story but tahts all i'll tell you--not much, but you can learn something from my experience. 
+            <br>
+            First thing is you have to believe in gods power. Without god maybe im gone right now. And the most important thing is DON'T EAT TO MUCH SUGAR. I Know sugar is kinda tasty but tomany of that thing is killing.
+            </p>
+            <script>
+                let flag = true;
+                function show() {
+                    document.getElementById('paragraf').style.display = flag ? 'block' : '';
+                    flag = !flag;
+                }
+            </script>
         </div>
-        <div class="text w-2/4 ">
-            <h1 class="text-4xl font-bold dark:text-white">Ryananta Danendra</h1>
-            <h4 data-aos="fade-down" data-aos-delay="2000" data-aos-easing="ease-out" class="dark:text-white">Welcome to my portfolio website! Here you can see some of my projects, skills, and maybe i'll write some blog about myself in the future in the future</h4>
-            <div class="button flex pt-5 gap-5">
-                <a data-aos="fade-up" data-aos-delay="2500" href="/src/about.html" class="px-3 py-2 bg-white shadow-black font-bold hover:scale-90 duration-300 ease-out shadow-md  rounded-lg">See My Profile</a>
-                <a data-aos="fade-up" data-aos-delay="2800" href="/src/blog.html" class="px-3 py-2 bg-white shadow-black font-bold hover:scale-90 duration-300 ease-out shadow-md  rounded-lg">Read Some Of My Blog</a>
-            </div>
+        <div class="blog w-full px-40 py-4">
+            <h1 class="font-bold flex items-center gap-3">
+                What are my hobbies?
+                <button type="change" onclick="show2()" id="button2"><svg id="svg2" xmlns="http://www.w3.org/2000/svg" class="fill-black" height="1em" viewBox="0 0 320 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com --><path d="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z"/></svg></button></h1>
+                <p id="paragraf2" class="hidden">Now I'ma tell you about my hobbies
+                    <br>
+                    My very very first hobby is soccer or football or--what ever you called it i Dont know why soccer is my hobby, maybe its my first sprot that i've played with my friends at home and--i started to like this sport. I used to take the extracuriculler at school-- well is not particullary soccer but futsal is just the same gameplay as soccer. For my idol--hmmmm.... i really liked neymar--in his prime hes a one of the goat for me his dribbling, skills to trick defender, shooting, passing, pace, physic--not realy. He's a great player if only he had a great attitude, hes ne of the best.
+                    <br>
+                    Continue to my second hobby is--Basketball. I used to not like basketball because im a soccer gu, but since im no that good at soccer because of my physic and stamina, then i try joining the basketball extracuriculler at senior high school because my grandfather told me that "You're not good at soccer, it dont suits you. basketball or volley will suits you due to your height". My height at senior high school is 6'0 foot--well is not that tall for european and americans but in Indonesia, thas quite tall already.so i joined the basketball extracuriculler and get picked in the team, altough im not sure why the coach picked me. I started to think that he picked me 'cause of my height but--i'm ot sure.
+                    <br>
+                    Next is cycling. i like cycling 'cause of my uncle. He really liked cycling that much. He always spare an-hour on his day to rode his bicycle, and he started to ask me to join him for a ride and i sometimes join a ride with on of his bicycle--yex he had a lot of by=icycle at his house. I dont get a lot of kilometers when i cycle 'cause i'm not that strong in stamina--but my furthest distance is 80 kilometers. maybe for you cyclers is not that far but for me, its killing my legs.
+                    <br>
+                    Maybe i have another hobby like badminton, rugby, weight training--but i dont play or do those often, and im not really a gammer-like on mobile games, im a sport kind of guy.
+                </p>
+            <script>
+                let flag2 = true;
+                function show2() {
+                    document.getElementById('paragraf2').style.display = flag2 ? 'block' : '';
+                    flag2 = !flag2;
+                }
+            </script>
         </div>
     </div>
 
@@ -64,7 +102,7 @@
                         <svg xmlns="http://www.w3.org/2000/svg" class="text-3xl" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com --><style>svg{fill:#ffffff}</style><path d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"/></svg>
                         <p>0858 - 5875 - 2663</p>
                     </div>
-                    <div class="svg flex items-center gap-8 pt-5">
+                    <div class="svg flex items-center pt-5 gap-8">
                         <svg xmlns="http://www.w3.org/2000/svg" class="text-3xl" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com --><style>svg{fill:#ffffff}</style><path d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48H48zM0 176V384c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V176L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"/></svg>
                         <p>ryanantadanendra887@gmail.com</p>
                     </div>
@@ -74,6 +112,7 @@
         <p class="text-white text-center py-20" style="font-size: .8rem;">Copyright 2023 © Ryananta Danendra, All Rights Reserved</p>
     </footer>
 
+    
     <script src="src/script.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
