Mengatur media query

--- a/blog.html
+++ b/blog.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="dist/output.css" rel="stylesheet">
-    <link rel="stylesheet" href="src/app.css">
+    <link href="../dist/output.css" rel="stylesheet">
+    <link rel="stylesheet" href="app.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
@@ -38,7 +38,7 @@
 
     <div class="blogs h-full pb-32 dark:bg-slate-800 dark:text-white duration-700 ease-in">
         <div class="blog w-full px-40">
-            <h1 class="font-bold flex items-center gap-3">
+            <h1 class="font-bold flex items-center gap-3 text-justify">
                 Type 1 diabetes since February 2023
                 <button type="change" onclick="show()" id="button"><svg id="svg" xmlns="http://www.w3.org/2000/svg" class="fill-black" height="1em" viewBox="0 0 320 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com --><path d="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z"/></svg></button></h1>
             <p id="paragraf" class="text-justify hidden">I suffer a type 1 diabetes from February 2023. type 1 diabetic is--maybe i'll just take the explanation from chatGPT so its more accurate. <br>Type 1 diabetes is a chronic condition in which the pancreas produces little or no insulin. Insulin is a hormone that helps the body to use glucose for energy. Without enough insulin, the glucose stays in the bloodstream, leading to high blood sugar levels, which can cause a range of complications.
@@ -61,7 +61,7 @@
             </script>
         </div>
         <div class="blog w-full px-40 py-4">
-            <h1 class="font-bold flex items-center gap-3">
+            <h1 class="font-bold flex items-center gap-3 text-justify">
                 What are my hobbies?
                 <button type="change" onclick="show2()" id="button2"><svg id="svg2" xmlns="http://www.w3.org/2000/svg" class="fill-black" height="1em" viewBox="0 0 320 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com --><path d="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z"/></svg></button></h1>
                 <p id="paragraf2" class="hidden">Now I'ma tell you about my hobbies
