--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>about</title>
-    <link href="dist/output.css" rel="stylesheet">
-    <link rel="stylesheet" href="src/app.css">
+    <link href="../dist/output.css" rel="stylesheet">
+    <link rel="stylesheet" href="app.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
@@ -33,11 +33,11 @@
         <h1 data-aos="fade-down" data-aos-delay="500" class="text-4xl dark:text-white">About</h1>
     </div>
 
-    <div class="content w-full min-h-screen bg-white dark:bg-slate-800 dark:text-white duration-700 ease-in">
-        <h2 data-aos="fade-up" data-aos-delay="800" class="text-md pt-6 px-40">Hi there! My name is Anak Agung Ngurah Bagus Ryananta Danendra--quite a long name isnt it? But you can just call me Gung Danend or without the Gung is alright. Here, i want to share about my profile</h2>
-        <div data-aos="zoom-in"data-aos-easing="ease-out" data-aos-delay="1500" class="image w-full h-96 mt-8 bg-cover bg-fixed" style="background-image: url(src/assets/about.jpeg);"></div>
+    <div id="about" class="content w-full min-h-screen bg-white dark:bg-slate-800 dark:text-white duration-700 ease-in">
+        <h2 data-aos="fade-up" data-aos-delay="800" class="text-md text-justify pt-6 px-40">Hi there! My name is Anak Agung Ngurah Bagus Ryananta Danendra--quite a long name isnt it? But you can just call me Gung Danend or without the Gung is alright. Here, i want to share about my profile</h2>
+        <div class="image w-full h-96 mt-8 bg-contain bg-no-repeat bg-center bg-fixed" style="background-image: url(src/assets/about.jpeg);"></div>
         <h2 data-aos="fade-up" data-aos-delay="500" class="text-sm pt-12 px-40 text-justify">I was born on the 13th of April 2006, and im the 1 child of three. I was born in Bali, Indonesia--a really beautiful island and known for its beautiful beach.</h2>
-        <h3 data-aos="fade-up" data-aos-delay="800" class="text-sm pt-5 px-40 text-justify">My education starts from a school named Bintang Besar, its a kindergarden with a playground and swimming pool--a really good facilities for a kindergarden for me. and for primary school i went to Bali Kiddy School--aschool that require its student to speak english everyday--maybe thats why now i can speak a little bit of english, and the facilities right there is very complete too--swimming poll, basketball court, clean toilet--of course cause the primary school just been made after i graduated from kindergarden. continue to my junior highschool i wnet to Jembatan Budaya School, achool taht studies english and mandarin everyday, but now i dont know why altough i study mandarin everyday and my mandarin is still bad as h*ll--maybe 'cause my friends and the teachers dont speak mandarin regularly so me my friends and the teachers speaks Indonesian everyday but its okay,at least i dont loss my english skills. continue with my senior high school i went to a school named SMK Negeri 1 Denpasar, a vocational school and i take the software enggineering major 'cauese i think that something that have a relation with technology will last a long time--i think, but lets see. Of cource the facilities here is not as good as my previous school since this school is 60 years old--like dirty toilet, bad basketball court--but its okay for me, at least i got the knowledge here. and here i started playing basketball and i loved it.</h3>
+        <h3 data-aos="fade-up" data-aos-delay="800" class="text-sm pt-5 px-40 text-justify">My education starts from a school named Bintang Besar, its a kindergarden with a playground and swimming pool--a really good facilities for a kindergarden for me. <br> and for primary school i went to Bali Kiddy School--a school that require its student to speak english everyday--maybe thats why now i can speak a little bit of english, and the facilities right there is very complete too--swimming pool, basketball court, clean toilet--of course 'cause the primary school just been made after i graduated from kindergarden. <br> continue to my junior highschool i wnet to Jembatan Budaya School, achool that studies english and mandarin everyday, but now i dont know why altough i study mandarin everyday but my mandarin is still bad is as h*ll--maybe 'cause my friends and the teachers dont speak mandarin regularly so me, my friends, and the teachers speaks Indonesian--but its okay,at least i dont loss my english skills. <br> continue to my senior high school i went to a school named SMK Negeri 1 Denpasar, a vocational school and i take the software enggineering major 'cauese i think that something that have a relation with technology will last a long time--i think, but lets see. Of cource the facilities here is not as good as my previous school since this school is 60 years old--like dirty toilet, bad basketball court--but its okay for me, at least i got the knowledge here. and here i started playing basketball and i loved it.</h3>
         <h3 data-aos="fade-up" data-aos-delay="800" class="text-sm pt-5 px-40 text-justify">Maybe here i will also write about what do i do, and my skills as a software enggineer--maybe if you need to amke web, you can just contact me--of course based on my skills, dont request any hard web 'cause im still a begginer <br> Here are some of my skills : </h3>
         <div class="skills w-full py-20 flex flex-wrap justify-center gap-5">
             <div class="card w-48 h-48 bg-contain bg-no-repeat bg-center" style="background-image: url(src/assets/html-removebg-preview.png);" data-aos="fade-up-right"></div>
@@ -51,8 +51,8 @@
         </div>
         <h2 class="text-center px-40">And Here are some of my projects. not much but--i've done my best :)</h2>
         <div class="projects w-full flex flex-wrap justify-center px-20 py-20 gap-5">
-            <div id="project" class="project w-80 h-48 bg-cover" style="background-image: url(src/assets/vanilla.png);"><div id="overlay" class="overlay w-80 h-48 text-center justify-center items-center bg-black text-white opacity-70 hidden duration-300 ease-out"></div></div>
-            <div id="project" class="project w-80 h-48 bg-cover" style="background-image: url(src/assets/wordpress.png);"><div id="overlay" class="overlay w-80 h-48 text-center justify-center items-center bg-black text-white opacity-70 hidden"></div></div>
+            <div id="project" class="project w-80 h-48 bg-contain bg-no-repeat bg-center" style="background-image: url(src/assets/vanilla.png);"><div id="overlay" class="overlay w-80 h-48 text-center justify-center items-center bg-black text-white opacity-70 hidden duration-300 ease-out"></div></div>
+            <div id="project" class="project w-80 h-48 bg-contain bg-no-repeat bg-center" style="background-image: url(src/assets/wordpress.png);"><div id="overlay" class="overlay w-80 h-48 text-center justify-center items-center bg-black text-white opacity-70 hidden"></div></div>
         </div>
     </div>
 
