--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <h1 class="text-4xl font-bold dark:text-white">Ryananta Danendra</h1>
             <h4 data-aos="fade-down" data-aos-delay="2000" data-aos-easing="ease-out" class="dark:text-white">Welcome to my portfolio website! Here you can see some of my projects, skills, and maybe i'll write some blog about myself in the future in the future</h4>
             <div class="button flex pt-5 gap-5">
-                <a data-aos="fade-up" data-aos-delay="2500" href="/src/about.html" class="px-3 py-2 bg-white shadow-black font-bold hover:scale-90 duration-300 ease-out shadow-md  rounded-lg">See My Profile</a>
-                <a data-aos="fade-up" data-aos-delay="2800" href="/src/blog.html" class="px-3 py-2 bg-white shadow-black font-bold hover:scale-90 duration-300 ease-out shadow-md  rounded-lg">Read Some Of My Blog</a>
+                <a data-aos="fade-up" data-aos-delay="2500" href="about.html" class="px-3 py-2 bg-white shadow-black font-bold hover:scale-90 duration-300 ease-out shadow-md  rounded-lg">See My Profile</a>
+                <a data-aos="fade-up" data-aos-delay="2800" href="blog.html" class="px-3 py-2 bg-white shadow-black font-bold hover:scale-90 duration-300 ease-out shadow-md  rounded-lg">Read Some Of My Blog</a>
             </div>
         </div>
     </div>
