--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
             <div class="button flex pt-5 gap-5">
                 <a data-aos="fade-up" data-aos-delay="2500" href="about.html" class="px-3 py-2 bg-white shadow-black font-bold hover:scale-90 duration-300 ease-out shadow-md  rounded-lg">See My Profile</a>
                 <a data-aos="fade-up" data-aos-delay="2800" href="blog.html" class="px-3 py-2 bg-white shadow-black font-bold hover:scale-90 duration-300 ease-out shadow-md  rounded-lg">Read Some Of My Blog</a>
+                <button data-aos="fade-up" onclick="audioPlay()"  data-aos-delay="3000" class="px-4 py-2 bg-white shadow-black shadow-md" id="playButton">Play Music</button> 
             </div>
         </div>
     </div>
 
+    <audio src="src/assets/palaceSlowed.mpeg" id="audio" autoplay controls loop></audio>
     <footer class="w-full min-h-96 bg-slate-900 ">
         <div class="wrap pt-20 flex">
             <div class="socials w-2/4 text-white text-center">
