--- a/about.html
+++ b/about.html
@@ -56,6 +56,7 @@
         </div>
     </div>
 
+    <audio src="src/assets/palaceSlowed.mpeg" id="audio" autoplay loop controls class="flex justify-center"></audio>
     <footer class="w-full min-h-96 bg-slate-900 ">
         <div class="wrap pt-20 flex">
             <div class="socials w-2/4 text-white text-center">
