--- a/blog.html
+++ b/blog.html
@@ -84,6 +84,8 @@
         </div>
     </div>
 
+    <audio src="src/assets/palaceSlowed.mpeg" id="audio" autoplay loop controls></audio>
+
     <footer class="w-full min-h-96 bg-slate-900 ">
         <div class="wrap pt-20 flex">
             <div class="socials w-2/4 text-white text-center">
